apps/services/rss/hub/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-hub
  labels:
    app: rss-hub
  annotations:
    link.argocd.argoproj.io/external-link: https://hub.gruber.dev.br
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rss-hub
  template:
    metadata:
      labels:
        app: rss-hub
    spec:
      containers:
      - name: rss-hub
        image: docker.io/diygod/rsshub:chromium-bundled-2023-08-15
        ports:
        - name: web
          containerPort: 1200
          protocol: TCP
        resources:
          requests:
            cpu: 60m
            memory: 256Mi
          limits:
            cpu: 150m
            memory: 512Mi
        livenessProbe:
          tcpSocket:
            port: 1200
          timeoutSeconds: 1
          periodSeconds: 10
          initialDelaySeconds: 60
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 1200
          timeoutSeconds: 1
          periodSeconds: 10
          initialDelaySeconds: 3
          failureThreshold: 3
        startupProbe:
          tcpSocket:
            port: 1200
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          initialDelaySeconds: 60
          failureThreshold: 30
      - name: puppeteer
        image: browserless/chrome:latest
        ports:
        - name: richpuppeteer
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: "200m"
            memory: "1024Mi"
          limits:
            cpu: "500m"
            memory: "2048Mi"
