apps/services/rss/hub/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-hub
  labels:
    app: rss-hub
  annotations:
    kube-vip.io/vipHost: rsshub
spec:
  ports:
  - name: web
    port: 80
    targetPort: 1200
    protocol: TCP
  selector:
    app: rss-hub
  type: LoadBalancer
  loadBalancerIP: "192.168.1.155"
  loadBalancerClass: kube-vip.io/kube-vip-class
