apps/services/rss/hub/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rss-hub
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hub.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: hub.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rss-hub
            port:
              name: web
  tls:
  - hosts:
    - hub.gruber.dev.br
    secretName: rsshub-tls
